# Ganzabara

./: .gitignore  CONTERBUTION.rst  CONTRIBUTING.md  CONTRIBUTING.rst  FUNDING.md  LICENSE  README.md  main.py  noversion.requirements.txt  pyproject.toml  pysidedeploy.spec  requirements.txt  source.qrc  source_rc.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md
.github/workflows/: android-build.yml  build-linux.yml  build-windows.yml
STRUCTURE/: STRUCTURE.md  STRUCTURE.mermaid  recommended.md
STRUCTURE/VIEW/: VIEWS.mermaid
src/: app.py  main.py  main_window.py  pyproject.toml  source.qrc  source_rc.py  translate.zsh
src/controllers/: __init__.py  invoice.py  language_settings.py  settings.py
src/gui/ui/: main_window.ui  main_window_ui.py
src/models/: __init__.py  account.py  base.py  customer.py  database.py  employee.py  inventory_item.py  invoice.py  sales.py  transaction.py  user.py
src/plugins/: loader.py  plugin_base.py
src/plugins/sales/styles/: sales.qss
src/plugins/sales/ui/: form.ui  form_ui.py
src/resources/locales/ts/: base.ts  en.ts  fa.ts
src/resources/theme/: qtquickcontrols2.conf  styles.qss
src/ui/: main_window.ui  main_window_ui.py  plugin_list_dialog.ui  plugin_list_dialog_ui.py
src/ui/invoice/: invoice.ui  invoice_ui.py
src/ui/settings/: select_language.ui  select_language_ui.py  settings.ui  settings_ui.py
src/utils/: Calender.py  DataStructure.py  logger.py  mixins.py  settings.py  shortcutes.py
src/widgets/: __init__.py  base_screen.py  jalali_calendar_popup.py  jalali_date_edit.py  menubar.py  plugins_list.py
