[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=83.0.0", "wheel>=0.47.0"]

# --------------------------------------------------------------------------- #
# Project metadata
# --------------------------------------------------------------------------- #
[project]
description = "Ganzabara — desktop accounting, invoicing, payroll, banking and inventory management application."
name = "ganzabara"
readme = "README.md"
requires-python = ">=3.11,<3.15"
version = "1.0.0"

# NOTICE: Ganzabara is released under the proprietary "NCHL-1.1" license
# (Non-Commercial / No-macOS License, Vahrka). It is NOT OSI-approved and is
# NOT open source. Redistribution, commercial use, and building for macOS/iOS
# are prohibited without a signed commercial agreement with Vahrka.
# See the LICENSE file at the project root for the full license text.
license = {text = "LicenseRef-NCHL-1.1"}
license-files = ["LICENSE"]

authors = [
  {name = "Vahrka", email = "legal@***"},
]
maintainers = [
  {name = "Vahrka Development Team", email = "dev@***"},
]

keywords = [
  "accounting",
  "invoicing",
  "payroll",
  "inventory",
  "banking",
  "desktop",
  "pyside6",
  "qt",
  "erp",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Customer Service",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Other Audience",
  "License :: Free To Use But Restricted",
  "License :: Other/Proprietary License",
  "Natural Language :: English",
  "Natural Language :: Persian",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Android",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Office/Business",
  "Topic :: Office/Business :: Financial",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Software Development :: User Interfaces",
  "Private :: Do Not Upload", # blocks accidental `twine upload` to PyPI
]

# --------------------------------------------------------------------------- #
# Runtime dependencies
# --------------------------------------------------------------------------- #
# Pinned with upper bounds for reproducible / auditable commercial builds.
# Regenerate a hashed lock (pip-compile --generate-hashes) before shipping.
dependencies = [
  "PySide6>=6.11.1",
  "PySide6-Addons>=6.11.1",
  "PySide6-Essentials>=6.11.1",
  "shiboken6>=6.11.1",
  "peewee>=4.1.2",
  "jdatetime>=5.3.0",
  "jalali_core>=1.0.0",
  "PyYAML>=6.0.3",
  "fpdf>=1.7.2",
  "numpy>=2.5.1",
  "pandas>=3.0.3",
  "python-dateutil>=2.9.0.post0",
  "six>=1.17.0",
  "httpx>=0.28.1",
  "httpcore>=1.0.9",
  "anyio>=4.14.1",
  "h11>=0.16.0",
  "certifi>=2026.6.17",
  "idna>=3.18",
]

[project.optional-dependencies]
bank-feed = [
  "requests>=2.32.0,<3.0",
]
build = [
  "Nuitka==4.1.3",
]
dev = [
  "pytest>=8.2.0",
  "pytest-qt>=4.4.0",
  "pyside6-tools>=0.0.1",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pip-audit>=2.7.3",
  "bandit>=1.7.9",
]
encryption = [
  "cryptography>=42.0.0,<43.0",
]
ocr = [
  "pytesseract>=0.3.10,<1.0",
  "pillow>=10.3.0,<11.0",
]

[project.urls]
"Commercial Licensing" = "https://github.com/Vahrka/Ganzabara/tree/main?tab=License-1-ov-file"
Documentation = "https://github.com/Vahrka/Ganzabara/discussions"
Homepage = "https://github.com/Vahrka/Ganzabara/tree/main"
Support = "https://github.com/Vahrka/Ganzabara/blob/main/.github/FUNDING.md"

[project.scripts]
ganzabara = "main:main"

# --------------------------------------------------------------------------- #
# Packaging layout
# --------------------------------------------------------------------------- #
[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
exclude = ["tests*", "*.tests", "*.tests.*", "__pycache__"]
where = ["src"]

[tool.setuptools.package-data]
"*" = [
  "resources/**/*",
  "*.qrc",
  "ui/**/*.ui",
]

# --------------------------------------------------------------------------- #
# Security & static-analysis tooling
# --------------------------------------------------------------------------- #
[tool.bandit]
exclude_dirs = ["src/ui", "tests"]
targets = ["src"]
# B101 (assert_used) allowed in tests only; keep default severity elsewhere.
skips = []

[tool.ruff]
line-length = 160
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
ignore = ["E203"]
select = ["E", "F", "W", "B", "S", "I"] # S = flake8-bandit security rules

[tool.mypy]
disallow_untyped_defs = false
ignore_missing_imports = true
mypy_path = "src"
python_version = "3.14"
warn_unused_ignores = true

[tool.pytest.ini_options]
qt_api = "pyside6"
testpaths = ["tests"]

# --------------------------------------------------------------------------- #
# PySide6 deployment tool integration (pyside6-deploy reads this file too)
# --------------------------------------------------------------------------- #
[tool.pyside6-project]
files = [
  "src/main.py",
  "src/app.py",
  "src/main_window.py",
  "src/source_rc.py",
  "src/**/**.py",
  "src/**/**/**.py",
]
