[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AccounterPro"
version = "1.0.0"
description = "A comprehensive accounting application with inventory, payroll, and banking features"
requires-python = ">=3.14"
dependencies = [
    "fpdf>=1.7.2",
    "jalali_core>=1.0.0",
    "jdatetime>=5.3.0",
    "Jinja2>=3.1.6",
    "MarkupSafe>=3.0.3",
    "Nuitka>=4.1.3",
    "numpy>=2.5.1",
    "ordered-set>=4.1.0",
    "pandas>=3.0.3",
    "patchelf>=0.17.2.4",
    "peewee>=4.1.1",
    "PySide6>=6.11.1",
    "PySide6_Addons>=6.11.1",
    "PySide6_Essentials>=6.11.1",
    "python-dateutil>=2.9.0",
    "pytz>=2026.2",
    "PyYAML>=6.0.3",
    "shiboken6>=6.11.1",
    "six>=1.17.0",
    "tzdata>=2026.2",
    "zstandard>=0.25.0",
]

[tool.setuptools]
packages = ["controllers", "data_models", "models", "services", "ui", "utils"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.qss", "*.ttf", "*.ico", "*.png", "*.svg", "*.qrc"]

[tool.pyside6-project]
files = [
    "app.py",
    "main.py",
    "controllers/",
    "data_models/",
    "models/",
    "services/",
    "ui/",
    "utils/",
]

[tool.nuitka]
enable-plugin = ["pyside6", "numpy", "pandas"]
standalone = true
onefile = false
windows-company-name = "AccounterPro"
windows-file-version = "1.0.0.0"